; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/platform/uv/extr_uv_irq.c_uv_domain_deactivate.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/platform/uv/extr_uv_irq.c_uv_domain_deactivate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_domain = type { i32 }
%struct.irq_data = type { i32 }
%struct.uv_IO_APIC_route_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_domain*, %struct.irq_data*)* @uv_domain_deactivate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uv_domain_deactivate(%struct.irq_domain* %0, %struct.irq_data* %1) #0 {
  %3 = alloca %struct.irq_domain*, align 8
  %4 = alloca %struct.irq_data*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.uv_IO_APIC_route_entry*, align 8
  store %struct.irq_domain* %0, %struct.irq_domain** %3, align 8
  store %struct.irq_data* %1, %struct.irq_data** %4, align 8
  store i64 0, i64* %5, align 8
  %7 = bitcast i64* %5 to %struct.uv_IO_APIC_route_entry*
  store %struct.uv_IO_APIC_route_entry* %7, %struct.uv_IO_APIC_route_entry** %6, align 8
  %8 = load %struct.uv_IO_APIC_route_entry*, %struct.uv_IO_APIC_route_entry** %6, align 8
  %9 = getelementptr inbounds %struct.uv_IO_APIC_route_entry, %struct.uv_IO_APIC_route_entry* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.irq_data*, %struct.irq_data** %4, align 8
  %11 = call i32 @irqd_cfg(%struct.irq_data* %10)
  %12 = load %struct.irq_data*, %struct.irq_data** %4, align 8
  %13 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @uv_program_mmr(i32 %11, i32 %14)
  ret void
}

declare dso_local i32 @uv_program_mmr(i32, i32) #1

declare dso_local i32 @irqd_cfg(%struct.irq_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
